--- a/pom.xml
+++ b/pom.xml
@@ -2,84 +2,104 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>scala.macros</groupId>
-  <artifactId>macros</artifactId>
+  <artifactId>macros-scala</artifactId>
   <version>1.0-SNAPSHOT</version>
-    <properties>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <encoding>UTF-8</encoding>
-        <scala.tools.version>2.10</scala.tools.version>
-        <scala.version>2.10.3</scala.version>
-    </properties>
-
     <dependencies>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-reflect</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-
-         <dependency>
-             <groupId>com.chuusai</groupId>
-             <artifactId>shapeless_2.10</artifactId>
-             <version>1.2.4</version>
-         </dependency>
-        <!-- Test -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.specs2</groupId>
-            <artifactId>specs2_${scala.tools.version}</artifactId>
-            <version>1.13</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.tools.version}</artifactId>
-            <version>2.0.RC1</version>
-            <scope>test</scope>
+            <groupId>com.chuusai</groupId>
+            <artifactId>shapeless_2.10</artifactId>
         </dependency>
     </dependencies>
+    <packaging>pom</packaging>
+  <properties>
+      <maven.compiler.source>1.7</maven.compiler.source>
+      <maven.compiler.target>1.7</maven.compiler.target>
+      <encoding>UTF-8</encoding>
+      <scala.tools.version>2.10</scala.tools.version>
+      <scala.version>2.10.3</scala.version>
+  </properties>
 
-    <build>
-        <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
-        <plugins>
-            <plugin>
-                <!-- see http://davidb.github.com/scala-maven-plugin -->
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.1.5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <configuration>
-                            <args>
-                                <arg>-make:transitive</arg>
-                                <arg>-dependencyfile</arg>
-                                <arg>${project.build.directory}/.scala_dependencies</arg>
-                            </args>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-            </plugin>
-        </plugins>
-    </build>
-</project>
+   <modules>
+      <module>macro</module>
+      <module>core</module>
+   </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                <version>${scala.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-reflect</artifactId>
+                <version>${scala.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.chuusai</groupId>
+                <artifactId>shapeless_2.10</artifactId>
+                <version>1.2.4</version>
+            </dependency>
+            <!-- Test -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.specs2</groupId>
+                <artifactId>specs2_${scala.tools.version}</artifactId>
+                <version>1.13</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest_${scala.tools.version}</artifactId>
+                <version>2.0.RC1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>scala.macros</groupId>
+                <artifactId>macro</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+     <build>
+         <pluginManagement>
+             <plugins>
+                 <plugin>
+                     <!-- see http://davidb.github.com/scala-maven-plugin -->
+                     <groupId>net.alchim31.maven</groupId>
+                     <artifactId>scala-maven-plugin</artifactId>
+                     <version>3.1.5</version>
+                     <executions>
+                         <execution>
+                             <goals>
+                                 <goal>compile</goal>
+                                 <goal>testCompile</goal>
+                             </goals>
+                             <configuration>
+                                 <args>
+                                     <arg>-make:transitive</arg>
+                                     <arg>-dependencyfile</arg>
+                                     <arg>${project.build.directory}/.scala_dependencies</arg>
+                                 </args>
+                             </configuration>
+                         </execution>
+                     </executions>
+                 </plugin>
+                 <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-surefire-plugin</artifactId>
+                     <version>2.13</version>
+                 </plugin>
+             </plugins>
+         </pluginManagement>
+     </build>
+
+  </project>
